Fix indices alignment problem

The buffer that holds the data is now 4 byte
aligned in case of the usage of shared buffer
for vertices and indices.

Fixes: QTBUG-83315
Change-Id: I8b1c11c7cf0d4ca052fbaaa749828d28589fc297
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>